--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 </nav>
 </header>
   <main>
-<p>你好，我是 Yzi，平平无奇。</p>
+<p>你好，我是 <a href="https://github.com/Yzi">Yzi</a>，平平无奇。</p>
 <p>建立这个博客只是单纯想有一个博客而已。</p>
 
 
